Update 2. 동전 0.ipynb

--- a/2. 동전 0.ipynb
+++ b/2. 동전 0.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 최종답"
+    "## 최종답 - 틀림"
    ]
   },
   {
@@ -163,6 +163,54 @@
     "            cnt+=1\n",
     "            k= tmp\n",
     "            \n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 4200\n",
+      "1\n",
+      "5\n",
+      "10\n",
+      "50\n",
+      "100\n",
+      "500\n",
+      "1000\n",
+      "5000\n",
+      "10000\n",
+      "50000\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,k = map(int, input().split())\n",
+    "\n",
+    "money = [int(input()) for _ in range(n)] \n",
+    "money.sort(reverse = True)\n",
+    "\n",
+    "cnt = 0 \n",
+    "\n",
+    "for i in money:\n",
+    "    if k >= i:\n",
+    "        num = k//i # 나누기 후 몫만 가져옴\n",
+    "        k -= i*num\n",
+    "        cnt+=num\n",
+    "        \n",
     "print(cnt)"
    ]
   }
