--- a/4. 거스름돈.ipynb
+++ b/4. 거스름돈.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -10,16 +10,7 @@
      "output_type": "stream",
      "text": [
       "380\n",
-      "120\n",
-      "1\n",
-      "1\n",
-      "20\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "4\n",
-      "2\n",
-      "2\n"
+      "4\n"
      ]
     }
    ],
@@ -37,20 +28,10 @@
     "    if pay>=i:\n",
     "        num = pay//i\n",
     "        pay -= i*num\n",
-    "        print(pay)\n",
     "        cnt += num\n",
-    "        print(cnt)\n",
-    "        print(num)\n",
     "        \n",
-    "print(num)"
+    "print(cnt)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
